--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.24.2
+  cloud_firestore: ^4.14.0
+  firebase_storage: ^11.6.0
+  firebase_auth: ^4.16.0
+  uuid: ^4.3.2
+  image_picker: ^1.0.7
+  intl: ^0.19.0
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
